[package]
name = "ax_macros"
version = "0.1.0"
authors = ["Actyx AG <developer@actyx.io>"]
edition = "2021"
description = "Supporting macros for the ax family"
readme = "README.md"
documentation = "https://docs.rs/ax_macros"
homepage = "https://developer.actyx.com"
license = "Apache-2.0"
keywords = ["distributed", "decentralized", "event-sourcing"]
categories = ["network-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "extra-traits"] }
