[package]
name = "ax_types"
version = "0.1.0"
edition = "2021"
authors = ["Actyx AG"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ax_macros = { version = "0.1", path = "../ax-macros" }
anyhow = "1.0.75"
base64 = "0.13.0" # this library is super outdated
intern-arc = "0.5.0"
libipld = { version = "0.14.0", default-features = false, features = [ "dag-cbor", "derive", ] }
serde = { version = "1.0.133", features = ["derive", "rc"] }
derive_more = "0.99.17"
unicode-normalization = "0.1.19"
serde_json = "1.0.74"
cbor-data = "0.8.15"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_derive = "0.3.0"
once_cell = "1.18.0"
