[package]
name = "ax_types"
version = "0.1.0"
authors = ["Actyx AG <developer@actyx.io>"]
edition = "2021"
description = "Actyx's core types"
readme = "README.md"
documentation = "https://docs.rs/actyx_sdk"
homepage = "https://developer.actyx.com/"
repository = "https://github.com/Actyx/Actyx"
license = "Apache-2.0"
keywords = ["distributed", "decentralized", "event-sourcing"]
categories = ["network-programming"]

[features]
default = ["arb"]
arb = ["quickcheck"]
sqlite = ["rusqlite"]

[dependencies]
ax_macros = { version = "0.1", path = "../ax-macros" }
anyhow = "1.0.52"
base64 = "0.13.0"
bytes = { version = "1.1.0", optional = true }
cbor-data = "0.8.15"
chrono = "0.4.31"
derive_more = "0.99.17"
im = { version = "15.1.0", features = ["serde"] }
intern-arc = "0.5.0"
lazy_static = "1.4.0"
libipld = { version = "0.14.0", default-features = false, features = [
    "dag-cbor",
    "derive",
] }
multibase = "0.9.1"
num-traits = "0.2.14"
once_cell = "1.9.0"
serde = { version = "1.0.133", features = ["derive", "rc"] }
serde_cbor = "0.11.2"
serde_json = "1.0.74"
serde-transcode = "1.1.1"
unicode-normalization = "0.1.19"

reqwest = { version = "0.11.22", features = [
    "json",
    "gzip",
    "stream",
    "multipart",
], optional = true, default-features = false }
rand = { version = "0.8.4", optional = true }
url = { version = "2.2.2", optional = true }

quickcheck = { version = "1.0.3", optional = true }
rusqlite = { version = "0.26.3", features = ["bundled"], optional = true }

[dev-dependencies]
asynchronous-codec = "0.6.0"
futures-timer = "3.0.2"
hex = "0.4.3"
quickcheck = "1.0.3"
quickcheck_derive = "0.3.0"
rand = "0.8.4"
structopt = "0.3.25"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.6.9", features = ["compat"] }
