[package]
name = "ax-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
actyx_sdk = { path = "../../sdk" }
anyhow = "1.0.42"
base64 = "0.13.0"
chrono = { version = "0.4", features = ["wasmbind"] }
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
crossbeam = "0.8.1"
derive_more = "0.99.16"
futures = "0.3.16"
futures-timer = { version = "3.0.1", features = ["wasm-bindgen"] }
getrandom = { version = "0.2.3", features = ["js"] }
js-sys = "0.3.52"
libp2p = { version = "0.39.1", features = ["ping", "noise", "wasm-ext-websocket", "yamux"], default-features = false }
libp2p-streaming-response = { path = "../libp2p-streaming-response" }
log = "0.4.14"
once_cell = "1.8.0"
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
rand6 = { package = "rand", version = "0.6", features = ["wasm-bindgen"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
wasm-bindgen = { version = "0.2.75", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.25"

# future: for using a service worker
#web-sys = { version = "0.3.52", features = ["console","Document","HtmlElement","HtmlInputElement","MessageEvent","Window","Worker"] }
