[package]
name = "ax-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
actyx_sdk = { path = "../../sdk" }
anyhow = "1.0.43"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["wasmbind"] }
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
crossbeam = "0.8.1"
crypto = { path = "../crypto", default-features = false }
derive_more = "0.99.16"
futures = "0.3.17"
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"] }
#getrandom = { version = "0.2.3", features = ["js"] }
js-sys = "0.3.54"
libp2p = { version = "0.40.0", features = ["ping", "noise", "wasm-ext-websocket", "yamux", "wasm-bindgen"], default-features = false }
libp2p-streaming-response = { path = "../libp2p-streaming-response" }
log = "0.4.14"
once_cell = "1.8.0"
parking_lot = { version = "0.11.2", features = ["wasm-bindgen"] }
#rand = { version = "0.8.4", features = ["wasm-bindgen"], package = "rand" }
#rand6 = { package = "rand", version = "0.8.4", features = ["wasm-bindgen"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
util = { path = "../util" }
wasm-bindgen = { version = "0.2.77", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.27"
wasm-futures-executor = { git = "https://github.com/wngr/wasm-futures-executor" }

[dependencies]
tokio = { version = "1.11.0", features = ["sync", "parking_lot"] }
