[package]
edition = "2021"
name = "ax"
version = "0.1.0"
authors = ["Actyx AG"]

[build-dependencies]
winres = { git = "https://github.com/Actyx/winres", branch = "cross_compile" }

[dependencies]
anyhow = "1.0.66"
atty = "0.2.14"
ax_core = { version = "0.2.0", path = "../ax-core" }
clap = { version = "4.4.8", features = ["derive", "env"] }
tokio = { version = "1.15.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.12"
ax_sdk = { path = "../../sdk" }
escargot = "0.5.8"
flate2 = "1.0.28"
maplit = "1.0.2"
once_cell = "1.18.0"
parking_lot = "0.12.1"
predicates = "3.0.4"
reqwest = { version = "0.11.22", default-features = false }
serde_json = "1.0.108"
tar = "0.4.40"
tempfile = "3.8.1"
