[package]
name = "ax"
version = "2.17.0"
authors = ["Actyx AG <developer@actyx.io>"]
edition = "2021"
description = "ax distributed event databank and command line tool"
readme = "README.md"
documentation = "https://docs.rs/ax"
homepage = "https://developer.actyx.com/"
repository = "https://github.com/Actyx/Actyx"
license = "Apache-2.0"
keywords = ["distributed", "decentralized", "event-sourcing"]
categories = ["network-programming"]

[build-dependencies]
winres = "0.1.12"
ax_core = { version = "0.2.0", path = "../ax-core" }

[dependencies]
ax_sdk = { version = "0.2.0", path = "../../sdk" }
ax_core = { version = "0.2.0", path = "../ax-core" }

# too much features, trim later
anyhow = "1.0.66"
atty = "0.2.14"
clap = { version = "4.4.8", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.4.4"
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.8.23"
chrono = { version = "0.4.19", features = ["serde"] }
futures = { version = "0.3.19", features = ["compat"], package = "futures" }
tungstenite = { version = "0.16.0" }
prettytable-rs = "0.8.0"
regex = "1.7"
lazy_static = "1.4.0"
# NOTE: this is definitely too much, trim later
libp2p = { version = "0.50.0", default-features = false, features = [
  "dns",
  "gossipsub",
  "macros",
  "noise",
  "ping",
  "plaintext",
  "request-response",
  "tcp",
  "tokio",
] }
zstd = "0.9.2"
banyan = { version = "0.18.0", package = "ax_banyan" }
banyan-utils = { version = "0.11.1", package = "ax_banyan_utils" }
fslock = "=0.1.6"
libipld = { version = "0.14.0", features = ["dag-cbor", "derive"] }
cbor-data = { version = "0.8.15", features = [
  "derive",
  "libipld14",
  "rfc3339",
] }
ipfs-sqlite-block-store = "0.13.0"
genawaiter = { version = "0.99.1", features = ["futures03"] }
console = "0.15.0"
tracing = { version = "0.1.37", features = [
  "max_level_trace",
  "release_max_level_trace",
] }
tracing-core = "0.1.21"
tracing-log = { version = "0.1.2", features = ["std"] }
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
itertools = "0.10.5"
rand = { version = "0.7" }
derive_more = "0.99.17"


[dev-dependencies]
assert_cmd = "2.0.12"
ax_sdk = { path = "../../sdk" }
escargot = "0.5.8"
flate2 = "1.0.28"
maplit = "1.0.2"
once_cell = "1.18.0"
parking_lot = "0.12.1"
predicates = "3.0.4"
reqwest = { version = "0.11.22", default-features = false }
tar = "0.4.40"
tempfile = "3.8.1"
base64 = "0.13.0"
