[package]
edition = { workspace = true }
name = "certs"
version = "0.1.0"
authors = ["Actyx AG"]

[dependencies]
crypto = { path = "../crypto" }
actyx_sdk = { path = "../../sdk" }
util = { path = "../util" }

anyhow = "1.0.52"
base64 = "0.13.0"
chrono = "0.4.19"
derive_more = "0.99.17"
regex = "1.5.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.74"
structopt = "0.3.25"
