[package]
name = "crypto"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[dependencies]
actyxos_sdk = { path = "../../sdk" }

anyhow = "1.0.40"
base64 = "0.13.0"
byteorder = { version = "1.4.3", features = ["i128"] }
chacha20poly1305 = { version = "0.8.0", features = ["std"] }
curve25519-dalek = "3.1.0"
derive_more = "0.99.14"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
libp2p = { version = "0.38.0", default-features = false }
multihash = { version = "0.14.0", features = ["identity"] }
rand = "0.7.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_cbor = "0.11.1"
sha2 = "0.9.3"
parking_lot = "0.11.1"
util = { path = "../util" }
x25519-dalek = "1.1.1"
zeroize = "1.3.0"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "signing"
harness = false
