[package]
name = "crypto"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[features]
legacy = ["aes-stream", "rust-crypto"]

[dependencies]
actyx_sdk = { path = "../../sdk" }
aes-stream = { version = "0.2.1", optional = true }
anyhow = "1.0.52"
base64 = "0.13.0"
byteorder = { version = "1.4.3", features = ["i128"] }
chacha20poly1305 = { version = "0.9.0", features = ["std"] }
curve25519-dalek = "3.2.0"
derive_more = "0.99.17"
ed25519-dalek = { version = "1.0.1", features = ["serde"], default-features = false }
libp2p = { version = "0.42.2", default-features = false }
multihash = { version = "0.14.0", features = ["identity"] }
parking_lot = "0.11.2"
rand = "0.7.3"
rust-crypto = { version = "0.2.36", package = "rust-crypto", optional = true }
serde = { version = "1.0.133", features = ["derive"] }
serde_cbor = "0.11.2"
sha2 = "0.9.9"
x25519-dalek = "1.2.0"
zeroize = "1.2.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "signing"
harness = false
