[package]
name = "ipfs-node"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[dependencies]
actyxos_sdk = { path = "../../sdk" }
ax-config = { path = "../ax-config" }
ax-futures-util = { path = "../ax-futures-util" }
crypto = { path = "../crypto" }
libp2p-ax-bitswap = { path = "../libp2p-ax-bitswap" }
libp2p-broadcast = { path = "../libp2p-broadcast" }
util = { path = "../util" }

anyhow = "1.0.38"
base64 = "0.13.0"
derive_more = "0.99.11"
fnv = "1.0.7"
futures = "0.3.12"
ipfs-sqlite-block-store = "0.2.0"
libipld = "0.11.0"
libp2p = { version = "0.35.0", default-features = false, features = ["dns", "plaintext", "gossipsub", "pnet", "identify", "tcp-tokio", "mdns", "mplex", "noise", "ping", "yamux"] }
maplit = "1.0.2"
parking_lot = "0.11.1"
prost = "0.7.0"
rusqlite = { version = "0.24.2", features = ["bundled", "backup"] }
serde = "1.0.123"
serde_cbor = { version = "0.11.1", features = ["tags"] }
serde_json = "1.0.61"
tokio = { version = "1.2.0", features = ["full"] }
tracing = "0.1.22"
void = "1.0.2"
warp = "0.3.0"

[dev-dependencies]
cid = { version = "0.6.0", features = ["arb"] }
futures-test = "0.3.12"
multihash = { version = "0.13.2", features = ["arb"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.3"
tokio = { version = "1.2.0", features = ["full", "test-util"], package = "tokio" }
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"

[build-dependencies]
prost-build = "0.7.0"
