[package]
name = "lake"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[dependencies]
actyxos_sdk = { version = "0.5", path = "../../sdk" }
ax-futures-util = { path = "../ax-futures-util" }
ipfs-node = { path = "../ipfs-node" }
trees = { path = "../trees" }
util = { path = "../util" }

anyhow = "1.0.38"
banyan = "0.8.1"
base64 = "0.13.0"
derive_more = "0.99.11"
futures = { version = "0.3.12", package = "futures" }
libipld = { version = "0.11.0", default-features = false }
maplit = "1.0.2"
num-traits = "0.2.14"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["raw_value"] }
thiserror = "1.0.23"
tracing = "0.1.22"

[dev-dependencies]
actyxos_sdk = { version = "0.5", path = "../../sdk", features = ["arb"] }

parking_lot = "0.11.1"
pretty_assertions = "0.6.1"
quickcheck = "1.0.3"
tokio = "1.2.0"
tracing-subscriber = "0.2.15"
