[package]
name = "libp2p-ax-bitswap"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[dependencies]
cid = "0.6.0"
derive_more = "0.99.11"
futures = { version = "0.3.12", package = "futures" }
itertools = "0.10.0"
libp2p = { version = "0.35.0", default-features = false, features = ["dns", "request-response", "pnet", "tcp-async-io", "mdns", "noise", "yamux"] }
multibase = "0.9.1"
multihash = "0.13.2"
prost = "0.7.0"
serde = { version = "1.0.123", features = ["derive"] }
tokio = { version = "1.2.0", features = ["full"], package = "tokio" }
tracing = "0.1.22"
unsigned-varint = "0.6.0"

[dev-dependencies]
cid = { version = "0.6.0", features = ["arb"] }
futures-test = "0.3.12"
maplit = "1.0.2"
multihash = { version = "0.13.2", features = ["arb"] }
parity-multiaddr = "0.11.0"
quickcheck = "0.9.2"
rand = "0.8.3"
tokio = { version = "1.2.0", features = ["full", "test-util"], package = "tokio" }

[build-dependencies]
prost-build = "0.7.0"
