[package]
name = "libp2p-streaming-response"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[dependencies]
derive_more = "0.99.17"
futures = { version = "0.3.19", package = "futures" }
libp2p = { version = "0.42.1", default-features = false }
log = "0.4.14"
serde = { version = "1.0.133", features = ["derive"] }
serde_cbor = "0.11.2"
thiserror = "1.0.30"

[dev-dependencies]
libp2p = { version = "0.42.1", default-features = false, features = ["plaintext", "mplex"] }
tokio = { version = "1.16.1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
