[package]
authors = ["Actyx AG"]
edition = "2018"
name = "logsvcd"
version = "0.2.0"

[dependencies]
actyxos_sdk = { version = "0.5", path = "../../sdk" }
ipfs-node = { path = "../ipfs-node" }
lake-formats = { path = "../lake-formats" }
util = { path = "../util" }

chrono = { features = ["serde"], version = "0.4.19" }
crossbeam = "0.8.0"
derive_more = "0.99.11"
futures = { version = "0.3.12", package = "futures" }
percent-encoding = "2.1.0"
rusqlite = { features = ["bundled", "backup", "hooks"], version = "0.24.2" }
serde = { features = ["derive"], version = "1.0.123" }
serde_cbor = { version = "0.11.1", features = ["tags"] }
serde_json = { features = ["raw_value"], version = "1.0.61" }
tokio = "1.2.0"
tracing = { features = ["log", "max_level_trace", "release_max_level_debug"], version = "0.1.22" }
tracing-subscriber = "0.2.15"

[dev-dependencies]
anyhow = "1.0.38"
# with criterion 0.3.4: html_reports only silences a warning
criterion = { version = "0.3.4", features = [ "html_reports" ] }
maplit = "1.0.2"
tokio = { version = "1.2.0", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "logsvcd"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.2"
android_log-sys = "0.2.0"
log-panics = "2.0.0"
rogcat = "0.4.1"

[target.'cfg(target_os = "windows")'.dependencies]
tracing_win_event_log = { path = "../tracing_win_event_log" }

[[bench]]
name = "log_roundtrip"
harness = false
