[package]
authors = ["Actyx AG"]
edition = "2018"
name = "logsvcd"
version = "0.2.0"

[dependencies]
actyx_sdk = { version = "0.1", path = "../../sdk" }
util = { path = "../util" }

chrono = { features = ["serde"], version = "0.4.19" }
crossbeam = "0.8.0"
derive_more = "0.99.13"
futures = { version = "0.3.14", package = "futures" }
percent-encoding = "2.1.0"
rusqlite = { features = ["bundled", "backup", "hooks"], version = "0.25.1" }
serde = { features = ["derive"], version = "1.0.125" }
serde_cbor = { version = "0.11.1", features = ["tags"] }
serde_json = { features = ["raw_value"], version = "1.0.64" }
tokio = { version = "1.5.0", package = "tokio" }
tracing = { features = ["log", "max_level_trace", "release_max_level_trace"], version = "0.1.25" }
tracing-subscriber = "0.2.17"

[dev-dependencies]
anyhow = "1.0.40"
# with criterion 0.3.4: html_reports only silences a warning
criterion = { version = "0.3.4", features = [ "html_reports" ] }
maplit = "1.0.2"
tokio = { version = "1.5.0", features = ["full"], package = "tokio" }

[lib]
crate-type = ["lib"]
name = "logsvcd"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10.1"
android_log-sys = "0.2.0"
log-panics = "2.0.0"
rogcat = "0.4.1"

[target.'cfg(target_os = "windows")'.dependencies]
tracing_win_event_log = { path = "../tracing_win_event_log" }

[[bench]]
name = "log_roundtrip"
harness = false
