[package]
name = "node-ffi"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[dependencies]
settings = { path = "../settings" }
node = { path = "../node" }

anyhow = "1.0.40"
crossbeam = "0.8.0"
ffi-support = "0.4.2"
futures = { version = "0.3.14", package = "futures" }
lazy_static = "1.4.0"
parking_lot = "0.11.1"
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["full"], package = "tokio" }
tracing = "0.1.25"

[lib]
crate-type = ["cdylib"]
name = "axosnodeffi"
