[package]
edition = { workspace = true }
name = "node-ffi"
version = "0.1.0"
authors = ["Actyx AG"]

[features]
migration-v1 = ["node/migration-v1"]

[dependencies]
settings = { path = "../settings" }
node = { path = "../node" }

anyhow = "1.0.52"
crossbeam = "0.8.1"
ffi-support = "0.4.4"
futures = { version = "0.3.19", package = "futures" }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
serde_json = "1.0.74"
tokio = { version = "1.15.0", features = ["full"], package = "tokio" }
tracing = "0.1.29"
zeroize = "1.2.0"

[lib]
crate-type = ["cdylib"]
name = "axosnodeffi"

[build-dependencies]
cc = "1.0.73"

